# iQ-Studio

./: .gitignore  IQS.md  IQS_FORMATTING.md  IQS_LITERACY.md  LICENSE  README.md  install.sh  iqs-launcher.sh  launcher.py
benchmarks/innoppe/: README.md
benchmarks/innoppe/scripts/: chart.py  draw_csv.py  print_mean.py  pyproject.toml  requirements.txt  system_monitor.py
benchmarks/iqs-streampipe/: README.md  config.json
benchmarks/iqs-streampipe/scripts/: auto_benchmark.sh  system_monitor.py
benchmarks/perception_model/: README.md
benchmarks/perception_model/tflite_model/: yolov10_det.tflite  yolov11_det.tflite  yolov8_det.tflite
docs/: changelog.md  how-to-install-offline-package-using-iqs-launcher.md
mod/: autotag.py  ipk.py  run.py  utils.py
tools/: README.md  audit_content.py  fix_bash_tags.py  get_headings.py
tutorials/: metadata.json
tutorials/applications/iqs-streampipe/: README.md  run.sh
tutorials/applications/iqs-vlm/: README.md  run.sh
tutorials/applications/iqs-yolov10n/: README.md
tutorials/avl/: README.md
tutorials/avl/gmsl-camera/: README.md
tutorials/avl/mipi-camera/: README.md
tutorials/model-deploy/: README.md
tutorials/model-pipeline/cv/: README.md  config.json
tutorials/sdks/iqs-ogenie/: README.md
tutorials/sdks/iqs-streampipe/: README.md
tutorials/sdks/iqs-vlm/: README.md
tutorials/starting-guides/flash-image/: README.md
tutorials/starting-guides/iqs-launcher/: README.md  how-to-install-offline-package-using-iqs-launcher.md
tutorials/starting-guides/q911/: README.md
(+16 files in other folders)
