[project]
requires-python = ">=3.9"
name = "scaler"
version = "0.0.1"
dependencies = [
    "matplotlib==3.10.0",
    "pandas==2.3.1",
    "psutil==6.1.1",
]


# [tool.setuptools]
# packages = []

[tool.ruff.lint]
select = [
    # "ALL",

    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "C4",   # flake8-comprehensions
    "C90",  # mccabe
    "F",    # pyflakes
    "FA102",# flake8-future-annotations
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
    "Q",    # flake8-quotes
    "A"     # flake8-builtins
]
# ignore = ["ANN"]


[tool.basedpyright]
typeCheckingMode = "standard"
